--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,24 +1,26 @@
 name: parkingapp
 description: "A new Flutter project."
-publish_to: 'none' 
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: ">=3.4.3 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   get: ^4.6.5
   flutter_lints: ^3.0.0
-  firebase_core: ^3.1.0
-  firebase_auth: ^5.1.0
-  cloud_firestore: ^5.0.0
+  cloud_firestore: ^4.16.0
+  firebase_auth: ^4.19.0
+  firebase_core: ^2.28.0
+  firebase_storage: ^11.7.1
+  font_awesome_flutter: ^10.3.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
- 
 
 flutter:
   uses-material-design: true
